--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -99,15 +99,16 @@ elseif (CMAKE_C_COMPILER_ID STREQUAL "Clang")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -Wall -pedantic-errors -Wextra -Werror-implicit-function-declaration -fno-builtin")
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-sign-compare -Wno-unused-parameter -Wno-int-to-pointer-cast -Wno-pointer-to-int-cast -Wno-unused-function")
 elseif (CMAKE_C_COMPILER_ID STREQUAL "Intel")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -Wall")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -Wall -lpthread")
 endif()
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SYS_FLAGS}")
-
+message("Fortran compiler id is ${CMAKE_Fortran_COMPILER_ID}")
 # Fortran compiler flags.
 if (CMAKE_Fortran_COMPILER_ID STREQUAL "GNU")
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -W -Wall -std=gnu -pedantic -Wno-unused-variable -Wno-unused-parameter -Werror=use-without-only -DCPRGNU")
 elseif (CMAKE_Fortran_COMPILER_ID STREQUAL "Intel")
   set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -DCPRINTEL")
+#  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -lmkl")
 endif()
 
 
@@ -138,19 +139,19 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 # Check third-party library dependencies.
 # Basic libraries to be linked in.
 set(BETR_LIBRARIES m)
-#if (${NEED_LAPACK})
-include(FindBLAS)
-include(FindLAPACK)
-find_package(BLAS REQUIRED)
-find_package(LAPACK REQUIRED)
-if (${LAPACK_LIBRARY_DIR})
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L${LAPACK_LIBRARY_DIR}")
+if (${NEED_LAPACK})
+  include(FindBLAS)
+  include(FindLAPACK)
+  find_package(BLAS REQUIRED)
+  find_package(LAPACK REQUIRED)
+  if (${LAPACK_LIBRARY_DIR})
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L${LAPACK_LIBRARY_DIR}")
+  endif()
+  if (${BLAS_LIBRARY_DIR})
+    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L${BLAS_LIBRARY_DIR}")
+  endif()
+  set(BETR_LIBRARIES ${BETR_LIBRARIES};${LAPACK_LIBRARIES};${BLAS_LIBRARIES})
 endif()
-if (${BLAS_LIBRARY_DIR})
-set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -L${BLAS_LIBRARY_DIR}")
-endif()
-set(BETR_LIBRARIES ${BETR_LIBRARIES};${LAPACK_LIBRARIES};${BLAS_LIBRARIES})
-#endif()
 
 set(BETR_NEED_PETSC 0)
 
