removed endrun in betr
 This replaced endrun with betr_status which returns error information backwards
to the driver. The next iteration will modify the SHR_ASSERT macro to enable similar
error message back propagation.
testing:
    configure and build - os x, gfortran 6.0.0
    unit tests - pass
    regression tests - pass
    meta tests - pass

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -1,5 +1,6 @@
 set(BETR_DRIVER_SOURCES
   BeTRType.F90
+  BeTRStatusSimType.F90
   BeTRSimulation.F90
   BeTRSimulationFactory.F90
   BeTRSimulationStandalone.F90
