moved tracer_varcon to betr_util
testing:
    configure and build - os x, gfortran 6.0.0
    unit tests - pass
    regression tests - passed after updating some of the baseline
    meta tests - pass

--- a/src/betr/betr_util/CMakeLists.txt
+++ b/src/betr/betr_util/CMakeLists.txt
@@ -19,6 +19,7 @@ set(BETR_UTIL_SOURCES
   betr_time_mod.F90
   betr_regression_mod.F90
   betr_utils.F90
+  Tracer_varcon.F90
   )
 
 configure_file(bshr_assert.h bshr_assert.h COPYONLY)
