--- a/src/betr/betr_math/CMakeLists.txt
+++ b/src/betr/betr_math/CMakeLists.txt
@@ -5,6 +5,7 @@ set(BETR_MATH_SOURCES
   MathfuncMod.F90
   ODEMod.F90
   BTridiagonalMod.F90
+  KineticsMod.F90
   )
 
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
