bug-fix for netcdf-c
The orginal netcdf-c in 3rd-party did not compile properly if
some of the system libs are compiled by different compilers on OS X.
Also, when buidling netcdf-c, cmake always tried to find libs installed
under /usr/include, /usr/lib, rather than under the build directory that installs
hdf5 and zlib. Now this bug is fixed by passing all directories explicitly.

testing:
     configure and build - os x, gfortran 6.1.0
     unit tests - pass
     regression tests - passed after updating some of the baseline
     meta tests - pass

--- a/3rd-party/CMakeLists.txt
+++ b/3rd-party/CMakeLists.txt
@@ -13,7 +13,7 @@ if (NOT EXISTS ${PROJECT_BINARY_DIR}/lib/libpfunit.a)
   else()
     set(PFUNIT_CMAKE_OPTS ${PFUNIT_CMAKE_OPTS} -DMPI=NO)
   endif()
-  
+
   set(PFUNIT_CMAKE_OPTS
     -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR}
     -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
@@ -107,14 +107,15 @@ if (NOT EXISTS ${Z_LIBRARY})
       message(FATAL_ERROR "Build of zlib library failed. See ${CMAKE_CURRENT_BINARY_DIR}/zlib_build_*.log.")
     endif()
   endif()
-
+  message(STATUS "Z_INCLUDE_DIR ${Z_INCLUDE_DIR}")
+  message(STATUS "Z_LIBRARY ${Z_LIBRARY}")
 endif()
 set(BETR_TP_LIBS z;${BETR_TP_LIBS})
 
 if (NOT EXISTS ${HDF5_LIBRARY})
   message("Configuring hdf5...")
   set(HDF5_CMAKE_OPTS -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER})
-  set(HDF5_CMAKE_OPTS ${HDF5_CMAKE_OPTS} -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}) 
+  set(HDF5_CMAKE_OPTS ${HDF5_CMAKE_OPTS} -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE})
   set(HDF5_CMAKE_OPTS ${HDF5_CMAKE_OPTS} -DZLIB_INCLUDE_DIRS=${PROJECT_BINARY_DIR}/include -DZLIB_LIBARIES=z -DZLIB_USE_EXTERNAL=OFF -DHDF5_ENABLE_PARALLEL=${HAVE_MPI})
   set(HDF5_CMAKE_OPTS ${HDF5_CMAKE_OPTS} -DHDF5_BUILD_CPP_LIB=OFF)
   set(HDF5_CMAKE_OPTS ${HDF5_CMAKE_OPTS} -DHDF5_BUILD_FORTRAN=OFF)
@@ -156,30 +157,40 @@ if (NOT EXISTS ${HDF5_LIBRARY})
       message(FATAL_ERROR "Build of hdf5 library failed. See ${CMAKE_CURRENT_BINARY_DIR}/hdf5_build_*.log.")
     endif()
   endif()
-  
+
   # On Macs we need to change the rpath of shared libraries so we can install them elsewhere.
+  message(STATUS "${APPLE} and ${BUILD_SHARED_LIBS}")
   if (APPLE AND BUILD_SHARED_LIBS)
-    execute_process(COMMAND otool -DX ${PROJECT_BINARY_DIR}/lib/lib${HDF5_LIB_NAME}${LIB_SUFFIX} 
+    execute_process(COMMAND otool -DX ${PROJECT_BINARY_DIR}/lib/lib${HDF5_LIB_NAME}${LIB_SUFFIX}
       OUTPUT_VARIABLE libhdf5_id)
     string(STRIP ${libhdf5_id} libhdf5_id)
     execute_process(COMMAND install_name_tool -id @rpath/lib${HDF5_LIB_NAME}${LIB_SUFFIX} ${PROJECT_BINARY_DIR}/lib/${HDF5_LIB_NAME}${LIB_SUFFIX})
     execute_process(COMMAND install_name_tool -id @rpath/lib${HDF5_HL_LIB_NAME}${LIB_SUFFIX} ${PROJECT_BINARY_DIR}/lib/lib${HDF5_HL_LIB_NAME}${LIB_SUFFIX})
     execute_process(COMMAND install_name_tool -change ${libhdf5_id} @rpath/libhdf5${LIB_SUFFIX} ${PROJECT_BINARY_DIR}/lib/${HDF5_HL_LIB_NAME}${LIB_SUFFIX})
   endif()
-  
+
 endif()
+message(STATUS "${PROJECT_BINARY_DIR}/lib/lib${HDF5_LIB_NAME}${LIB_SUFFIX}")
 if (HDF5_LIBRARY STREQUAL "${PROJECT_BINARY_DIR}/lib/lib${HDF5_LIB_NAME}${LIB_SUFFIX}")
+  message(STATUS "set betr_hdf5_library from 3rd-party ${CMAKE_INSTALL_PREFIX}/lib/lib${HDF5_LIB_NAME}${LIB_SUFFIX}")
   set(BETR_HDF5_LIBRARY "${CMAKE_INSTALL_PREFIX}/lib/lib${HDF5_LIB_NAME}${LIB_SUFFIX}" PARENT_SCOPE)
+  set(BETR_HDF5_LIBRARY "${PROJECT_BINARY_DIR}/lib/lib${HDF5_LIB_NAME}${LIB_SUFFIX}")
   set(BETR_HDF5_HL_LIBRARY "${CMAKE_INSTALL_PREFIX}/lib/lib${HDF5_HL_LIB_NAME}${LIB_SUFFIX}" PARENT_SCOPE)
+  set(BETR_HDF5_HL_LIBRARY "${PROJECT_BINARY_DIR}/lib/lib${HDF5_HL_LIB_NAME}${LIB_SUFFIX}")
   set(BETR_HDF5_INCLUDE_DIR "${CMAKE_INSTALL_PREFIX}/include" PARENT_SCOPE)
+  set(BETR_HDF5_INCLUDE_DIR "${PROJECT_BINARY_DIR}/include")
+  message(STATUS "set1 ${BETR_HDF5_LIBRARY}")
+  message(STATUS "set2 ${BETR_HDF5_HL_LIBRARY}")
+  message(STATUS "set3 ${BETR_HDF5_INCLUDE_DIR}")
 else()
+  message(STATUS "set betr_hdf5_library from system")
   set(BETR_HDF5_LIBRARY ${HDF5_LIBRARY} PARENT_SCOPE)
   set(BETR_HDF5_HL_LIBRARY ${HDF5_HL_LIBRARY} PARENT_SCOPE)
   set(BETR_HDF5_INCLUDE_DIR ${HDF5_INCLUDE_DIR} PARENT_SCOPE)
 endif()
 
-# If our HDF5 library is named something weird, copy it to a file with the 
-# regular boring name. This prevents libraries like Silo and Exodus (which 
+# If our HDF5 library is named something weird, copy it to a file with the
+# regular boring name. This prevents libraries like Silo and Exodus (which
 # take a while to catch up to recent developments) from freaking out.
 if (NOT HDF5_LIB_NAME STREQUAL "hdf5" AND HDF5_LIBRARY MATCHES "${PROJECT_BINARY_DIR}/lib" AND NOT EXISTS ${PROJECT_BINARY_DIR}/lib/libhdf5${LIB_SUFFIX})
   execute_process(COMMAND ${CMAKE_COMMAND} -E copy ${HDF5_LIBRARY} ${PROJECT_BINARY_DIR}/lib/libhdf5${LIB_SUFFIX})
@@ -204,10 +215,33 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
   endif()
 
   message("Configuring netcdf-c library...")
-  execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_LIB=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIB=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
+  SET(ZLIB_INCLUDE_DIRS "${PROJECT_BINARY_DIR}/include")
+  message(STATUS "${CMAKE_COMMAND} ${BETR_HDF5_LIBRARY} ${BETR_HDF5_INCLUDE_DIR} ${BETR_HDF5_HL_LIBRARY}")
+#  execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_LIB=${BETR_HDF5_LIBRARY} -DHDF5_HL_LIB=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS} -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
+   execute_process(COMMAND "${CMAKE_COMMAND}" -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
+                  -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE} -DUSE_HDF5=ON -DHDF5_C_LIBRARY=${BETR_HDF5_LIBRARY}
+                  -DHDF5_HL_LIBRARY=${BETR_HDF5_HL_LIBRARY} -DHDF5_INCLUDE_DIR=${BETR_HDF5_INCLUDE_DIR}
+                  -DZLIB_LIBRARY=${Z_LIBRARY} -DZLIB_INCLUDE_DIRS=${Z_INCLUDE_DIR}
+                  -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DENABLE_DAP=OFF
+                  -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS} -DFIND_SHARED_LIBS=${BUILD_SHARED_LIBS}
+                  -DENABLE_DYNAMIC_LOADING=ON -DENABLE_TESTS=OFF -DBUILD_UTILITIES=ON -DBUILD_EXAMPLES=OFF
+                  -DNC_HAVE_PARALLEL_HDF5=${BETR_HAVE_MPI} -DHDF5_IS_PARALLEL=${BETR_HAVE_MPI}
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
                   OUTPUT_VARIABLE netcdf_c_config_log ERROR_VARIABLE netcdf_c_config_err
                   RESULT_VARIABLE stat)
+
+#  message("PROJECT_BINARY_DIR = ${PROJECT_BINARY_DIR}")
+#  set(NETCDF_C_CONFIG_OPTS --prefix=${PROJECT_BINARY_DIR})
+#  set(NETCDF_C_CONFIG_OPTS ${NETCDF_C_CONFIG_OPTS} --with-hdf5=${PROJECT_BINARY_DIR})
+#  set(NETCDF_C_CONFIG_OPTS ${NETCDF_C_CONFIG_OPTS} --with-zlib=${PROJECT_BINARY_DIR})
+#  set(NETCDF_C_CONFIG_OPTS ${NETCDF_C_CONFIG_OPTS} --enable-shared=no)
+#  execute_process(COMMAND "./configure" ${NETCDF_C_CONFIG_OPTS}
+#    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
+#    OUTPUT_VARIABLE netcdf_c_config_log ERROR_VARIABLE netcdf_c_config_err
+#    RESULT_VARIABLE stat)
+
+
+
   file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_c_config.log ${netcdf_c_config_log})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
@@ -221,7 +255,7 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
   endif()
 
   message("Building and installing netcdf-c library...")
-  execute_process(COMMAND make install -j4
+  execute_process(COMMAND make install -j1
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-c
                   OUTPUT_VARIABLE netcdf_build_log ERROR_VARIABLE netcdf_build_err
                   RESULT_VARIABLE stat)
@@ -273,6 +307,23 @@ if (NOT EXISTS ${NETCDF_LIBRARY})
                   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran
                   OUTPUT_VARIABLE netcdf_fortran_config_log ERROR_VARIABLE netcdf_fortran_config_err
                   RESULT_VARIABLE stat)
+#  set(NETCDF_FORTRAN_CMAKE_OPTS -DnetCDF_LIBRARIES=${PROJECT_BINARY_DIR}/lib/libnetcdf.a)
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DnetCDF_INCLUDE_DIR=${PROJECT_BINARY_DIR}/include)
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DCMAKE_Fortran_COMPILER=${CMAKE_Fortran_COMPILER})
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER})
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE})
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DCMAKE_INSTALL_PREFIX=${PROJECT_BINARY_DIR})
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DCMAKE_INSTALL_LIBDIR=lib)
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS})
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DENABLE_TESTS=OFF)
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DBUILD_UTILITIES=ON)
+#  set(NETCDF_FORTRAN_CMAKE_OPTS  ${NETCDF_FORTRAN_CMAKE_OPTS} -DBUILD_EXAMPLES=OFF)
+
+#  execute_process(COMMAND "${CMAKE_COMMAND}"
+#    ${NETCDF_FORTRAN_CMAKE_OPTS}
+#    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/netcdf-fortran
+#    OUTPUT_VARIABLE netcdf_fortran_config_log ERROR_VARIABLE netcdf_fortran_config_err
+#                   RESULT_VARIABLE stat)
   file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/netcdf_fortran_config.log ${netcdf_fortran_config_log})
   if (NOT stat EQUAL 0)
     if (TRAVIS_CI)
@@ -328,4 +379,3 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${BETR_TP_C_FLAGS}" PARENT_SCOPE)
 set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${BETR_TP_Fortran_FLAGS}" PARENT_SCOPE)
 set(BETR_LIBRARIES ${BETR_TP_LIBS};${BETR_LIBRARIES} PARENT_SCOPE)
 set(BETR_INCDIRS ${BETR_INCDIRS};${BETR_TP_INCDIRS} PARENT_SCOPE)
-
