--- a/3rd-party/netcdf-c/liblib/CMakeLists.txt
+++ b/3rd-party/netcdf-c/liblib/CMakeLists.txt
@@ -36,14 +36,15 @@ ENDIF()
 SET(TLL_LIBS "")
 
 SET(TLL_LIBS ${TLL_LIBS} ${HAVE_LIBM} ${ZLIB_LIBRARY})
-
+message(STATUS "HAVE_LIBM ${HAVE_LIBM} ZLIB_LIBRARY ${ZLIB_LIBRARY}")
 # Add extra dependencies specified via NC_EXTRA_DEPS
 SET(TLL_LIBS ${TLL_LIBS} ${EXTRA_DEPS})
-
+message(STATUS "EXTRA_DEPS ${EXTRA_DEPS} HAVE_LIBDL ${HAVE_LIBDL} ${LIBDL}")
 IF(HAVE_LIBDL)
   SET(TLL_LIBS ${LIBDL} ${TLL_LIBS})
 ENDIF()
 
+message(STATUS "USE_HDF5 ${USE_HDF5} MSVC ${MSVC}")
 IF(USE_HDF5 OR USE_NETCDF4)
   IF(NOT MSVC)
     # Some version of cmake define HDF5_hdf5_LIBRARY instead of
@@ -59,6 +60,8 @@ IF(USE_HDF5 OR USE_NETCDF4)
     # Make sure that HDF5_C_LIBRARY appears *after*
     # HDF5_HL_LIBRARY.
     SET(TLL_LIBS ${HDF5_HL_LIBRARIES} ${HDF5_C_LIBRARIES} ${TLL_LIBS} ${SZIP_LIBRARY})
+    message(STATUS "TLL_LIBS ${HDF5_HL_LIBRARIES} ${HDF5_C_LIBRARIES} ${SZIP_LIBRARY}")
+    message(STATUS "TLL_LIBS ${TLL_LIBS}")
   ELSE() # Windows CMake defines HDF5_LIBRARIES.
     SET(TLL_LIBS ${HDF5_LIBRARIES} ${TLL_LIBS} ${SZIP_LIBRARY})
   ENDIF()
@@ -127,6 +130,8 @@ ENDIF()
 SET(ALL_TLL_LIBS ${TLL_LIBS} PARENT_SCOPE)
 SET(NC_LIBS ${NC_LIBS} PARENT_SCOPE)
 
+message(STATUS "liblib ALL_TLL_LIBS ${ALL_TLL_LIBS}")
+message(STATUS "TLL_LIBS ${TLL_LIBS}")
 FILE(GLOB CUR_EXTRA_DIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*.h ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
 SET(CUR_EXTRA_DIST ${CUR_EXTRA_DIST} CMakeLists.txt Makefile.am)
 ADD_EXTRA_DIST("${CUR_EXTRA_DIST}")
