bug fix for intel compiler and edison
 Now a select type implementation is removed when passing a generic
data type as an argument of an external function which is passed to
an ODE solver. Such practice is not supported by intel compiler. Also
some bug is fixed to ensure the hdf5 libs are correctly linked when
installing netcdf-c.

Testing:
  configure and built, edison, intel/15.0.1.133
  unit tests - pass
  regression tests - pass
  meta tests - pass

--- a/3rd-party/netcdf-c/CMakeLists.txt
+++ b/3rd-party/netcdf-c/CMakeLists.txt
@@ -496,7 +496,7 @@ IF(USE_HDF5 OR ENABLE_NETCDF_4)
   message(STATUS "USE HDF5 OR ENABLE NETCDF_4 ${HDF5_C_LIBRARY} ${HDF5_HL_LIBRARY} ${HDF5_INCLUDE_DIR}")
   IF(HDF5_C_LIBRARY AND HDF5_HL_LIBRARY AND HDF5_INCLUDE_DIR)
     message(STATUS "HDF5 WAS ALREADY SETUP")
-    SET(HDF5_C_LIBRARIES ${HDF5_C_LIBRARY} ${HDF5_HL_LIBRARY})
+    SET(HDF5_C_LIBRARIES ${HDF5_HL_LIBRARY} ${HDF5_C_LIBRARY})
     MESSAGE(STATUS "Using HDF5 C Library: ${HDF5_C_LIBRARY}")
     MESSAGE(STATUS "Using HDF5 HL LIbrary: ${HDF5_HL_LIBRARY}")
     INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIR})
@@ -624,9 +624,10 @@ IF(USE_HDF5 OR ENABLE_NETCDF_4)
     IF(ENABLE_DYNAMIC_LOADING)
       SET(USE_LIBDL ON CACHE BOOL "")
     ENDIF()
-    SET(HDF5_C_LIBRARY hdf5)
+   #do not reset the value to hdf5, because is passed in from outside
+   # SET(HDF5_C_LIBRARY hdf5)
   ENDIF(NOT MSVC)
-
+  message(STATUS "HDF5_C_LIBRARAY ${HDF5_C_LIBRARY}")
   CHECK_LIBRARY_EXISTS(${HDF5_C_LIBRARY} H5free_memory "" HDF5_HAS_H5FREE)
 
 
@@ -663,7 +664,7 @@ IF(USE_HDF5 OR ENABLE_NETCDF_4)
   ENDIF()
 
   #Check to see if H5Z_SZIP exists in HDF5_Libraries. If so, we must use szip.
-  CHECK_LIBRARY_EXISTS(hdf5 H5Z_SZIP "" USE_SZIP)
+  CHECK_LIBRARY_EXISTS(${HDF5_C_LIBRARY} H5Z_SZIP "" USE_SZIP)
   message(STATUS "USE_SZIP ${USE_SZIP}")
   IF(USE_SZIP)
     FIND_LIBRARY(SZIP NAMES szip sz)
@@ -1112,7 +1113,10 @@ IF(NOT HAVE_UNISTD_H)
 ENDIF()
 
 CHECK_INCLUDE_FILE("alloca.h"  HAVE_ALLOCA_H)
-CHECK_INCLUDE_FILE("sys/malloc.h"    HAVE_MALLOC_H)
+CHECK_INCLUDE_FILE("malloc.h"    HAVE_MALLOC_H)
+IF(NOT HAVE_MALLOC_H)
+  CHECK_INCLUDE_FILE("sys/malloc.h"    HAVE_MALLOC_H)
+ENDIF()
 CHECK_INCLUDE_FILE("ctype.h"   HAVE_CTYPE_H)
 CHECK_INCLUDE_FILE("dirent.h"  HAVE_DIRENT_H)
 CHECK_INCLUDE_FILE("dlfcn.h"   HAVE_DLFCN_H)
