--- a/3rd-party/netcdf-c/liblib/CMakeLists.txt
+++ b/3rd-party/netcdf-c/liblib/CMakeLists.txt
@@ -59,6 +59,8 @@ IF(USE_HDF5 OR USE_NETCDF4)
     # builds:
     # Make sure that HDF5_C_LIBRARY appears *after*
     # HDF5_HL_LIBRARY.
+    message(STATUS "HDF5_HL_LIBRARIES ${HDF5_HL_LIBRARIES}")
+    message(STATUS "HDF5_C_LIBRARIES ${HDF5_C_LIBRARIES}")
     SET(TLL_LIBS ${HDF5_HL_LIBRARIES} ${HDF5_C_LIBRARIES} ${TLL_LIBS} ${SZIP_LIBRARY})
     message(STATUS "TLL_LIBS ${HDF5_HL_LIBRARIES} ${HDF5_C_LIBRARIES} ${SZIP_LIBRARY}")
     message(STATUS "TLL_LIBS ${TLL_LIBS}")
