--- a/src/Applications/CMakeLists.txt
+++ b/src/Applications/CMakeLists.txt
@@ -1,24 +1,6 @@
-set(BETR_APP_SOURCES
-   ApplicationsFactory.F90
-  )
+add_subdirectory(soil-farm)
+add_subdirectory(app_util)
+# FIXME(bja, 201603) is this manual list necessary with the subdir
+# adding to parent scope?
 
-include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
-include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
-
-
-include(add_betr_library)
-add_betr_library(Applications ${BETR_APP_SOURCES})
-
-
-set(BETR_LIBRARIES Applications;${BETR_LIBRARIES} PARENT_SCOPE)
-set(BETR_LIBRARIES Applications;${BETR_LIBRARIES})
-
-link_libraries(${BETR_LIBRARIES};${BETR_TPLS})
-
-#X#add_subdirectory(tests)
-
-if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
-  install(TARGETS Applications DESTINATION lib)
-  file(GLOB HEADERS *.h)
-  install(FILES ${HEADERS} DESTINATION include/betr/Applications)
-endif()
+set(BETR_LIBRARIES app_util;${BETR_LIBRARIES} PARENT_SCOPE)
