--- a/regression-tests/tests/standalone/standalone.cfg
+++ b/regression-tests/tests/standalone/standalone.cfg
@@ -1,5 +1,6 @@
 [default_tolerances]
 concentration = 1.0e-16 absolute
+pfraction = 1.0e-16 absolute
 pressure = 1.0e-16 absolute
 
 [mock-adr]
@@ -7,18 +8,22 @@ timeout = 15 seconds
 
 [mock-advection]
 timeout = 15 seconds
+pfraction = 2.0e-14 absolute
 pressure = 2.0e-14 absolute
 
 [mock-diffusion]
 timeout = 15 seconds
+pfraction = 2.0e-14 absolute
 pressure = 2.0e-14 absolute
 
 [mock-ss-diffusion]
 timeout = 15 seconds
+pfraction = 2.0e-14 absolute
 pressure = 2.0e-14 absolute
 
 [mock-ss-uniform-diffusion]
 timeout = 15 seconds
+pfraction = 2.0e-14 absolute
 pressure = 2.0e-14 absolute
 
 [mock-reaction]
