fixed fmacro-backtrace-limit error
On OS, the CMAKE_C_FLAG option fmacro-backtrace-limit did not work with the most recent
version of Xcode 7.3.1. It is now replaced ftemplate-backtrace-limit and works.

testing:
     configure and build - os x, gfortran 6.1.0
     unit tests - pass
     regression tests - pass
     meta tests - pass

--- a/3rd-party/netcdf-fortran/CMakeLists.txt
+++ b/3rd-party/netcdf-fortran/CMakeLists.txt
@@ -477,7 +477,8 @@ IF (UNIX AND ${CMAKE_SIZEOF_VOID_P} MATCHES "8")
   ADD_DEFINITIONS(-DLONGLONG_IS_LONG)
   # for easier debugging of cfortran.h
   IF (APPLE)
-    SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fmacro-backtrace-limit=0")
+  #  SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fmacro-backtrace-limit=0")
+     SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ftemplate-backtrace-limit=0")
   endif ()
 ENDIF()
 
