update the tracer setup interface
Now the tracer setup is done into steps. The first step
setup tracer id and group id, the second step setup tracer names
and specific group ids.

Testing
  Configure and build: OSx gcc6.2.0

--- a/src/Applications/app_util/CMakeLists.txt
+++ b/src/Applications/app_util/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/CENT_ECACNP)
-
+include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/CENT_ECADCNP)
 
 
 include(add_betr_library)
