updated tags for group tracers
Now almost all major tracers are allowed to assign many members to a
group. This prepares the simulating tracers and microbes with tags.
However, I am still not able to track down the memory issue which may
be linked to the stack limit size.

testing:
  configure & build: pass OSx, gcc6.2.0_0
  mtest: pass
  unit test: pass
  regression test: if the stack limit not hit, pass

--- a/src/driver/standalone/CMakeLists.txt
+++ b/src/driver/standalone/CMakeLists.txt
@@ -27,7 +27,7 @@ set(BETR_LIBRARIES betr_driver_standalone;${BETR_LIBRARIES})
 #X#add_subdirectory(tests)
 
 if (NOT CMAKE_INSTALL_PREFIX STREQUAL "INSTALL_DISABLED")
-  install(TARGETS betr_driver_standalone DESTINATION bin)
+  install(TARGETS betr_driver_standalone DESTINATION lib)
   file(GLOB HEADERS *.h)
   install(FILES ${HEADERS} DESTINATION include/betr/driver/standalone)
 endif()
