--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,5 +3,11 @@ add_subdirectory(shr)
 add_subdirectory(esmf_wrf_timemgr)
 add_subdirectory(stub_clm)
 add_subdirectory(betr)
-add_subdirectory(Applications)
+if (BETR_BGC)
+  add_subdirectory(Applications)
+  message("betr user defined bgc is on")    
+else()
+  message("betr user defined bgc is off")
+endif()
+
 add_subdirectory(driver)
