coupled CENT_ECACNP to alm
Added new files for alm coupling with the revised ECACNP soil bgc.
The code was compiled successfully using gnu6 compiler.

--- a/src/stub_clm/CMakeLists.txt
+++ b/src/stub_clm/CMakeLists.txt
@@ -39,6 +39,7 @@ set(BETR_STUB_CLM_SOURCES
   column_varcon.F90
   debuginfoMod.F90
   decompMod.F90
+  PlantMicKineticsMod.F90
   fileutils.F90
   getdatetime.F90
   histFileMod.F90
