--- a/src/betr/betr_main/CMakeLists.txt
+++ b/src/betr/betr_main/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_grid)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_math)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_dtype)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
+include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_para)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_rxns)
 
 
