bug fix for standalone run
With those fixes, by using
make config CC=${CC} CXX=${CXX} FC=${FC} BGC=0 SBETR=1
the standalone version will compile and all tests passed.
The test was done with gnu6.x compiler on OSX.

--- a/src/driver/shared/CMakeLists.txt
+++ b/src/driver/shared/CMakeLists.txt
@@ -23,7 +23,9 @@ include(add_betr_library)
 add_betr_library(betr_driver_shared ${BETR_DRIVER_SHARED_SOURCES})
 
 set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -w")
-
+if (SBETR)
+  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -DSBETR")
+endif()
 set(BETR_LIBRARIES betr_driver_shared;${BETR_LIBRARIES} PARENT_SCOPE)
 set(BETR_LIBRARIES betr_driver_shared;${BETR_LIBRARIES})
 
