--- a/src/Applications/app_util/CMakeLists.txt
+++ b/src/Applications/app_util/CMakeLists.txt
@@ -2,7 +2,8 @@ set(BETR_APP_UTIL_SOURCES
    ApplicationsFactory.F90
   )
 
-
+include_directories(${CMAKE_BINARY_DIR}/src/shr)
+include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
 include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_core)
 include_directories(${CMAKE_BINARY_DIR}/src/Applications/soil-farm/bgcfarm_util)
