changed some pointer allocations to real
this fixes an allocation bug but betrmaxsoilorder cannot be greater than 1 with this fix

--- a/src/Applications/soil-farm/bgcfarm_util/CMakeLists.txt
+++ b/src/Applications/soil-farm/bgcfarm_util/CMakeLists.txt
@@ -7,7 +7,7 @@ include_directories(${CMAKE_BINARY_DIR}/src/shr)
 include_directories(${CMAKE_BINARY_DIR}/src/stub_clm)
 if (BETR_BGC EQUAL 1)
   include_directories(${CMAKE_BINARY_DIR}/src/betr/betr_util)
-  include(add_beta_library)
+  include(add_betr_library)
   add_betr_library(bgcfarm_util ${BGCFARM_UTIL_SOURCES})
 
   set(BETR_LIBRARIES bgcfarm_util;${BETR_LIBRARIES} PARENT_SCOPE)
