More code reorgnization of Applications
Now the eca_cnp code in soil-farm is further
separated to conduct layer by layer testing.
All standard tests passed with gcc8 compilers on OSX.

--- a/src/Applications/soil-farm/CMakeLists.txt
+++ b/src/Applications/soil-farm/CMakeLists.txt
@@ -8,9 +8,9 @@ endif()
 # FIXME(bja, 201603) is this manual list necessary with the subdir
 # adding to parent scope?
 
-#set(BETR_LIBRARIES bgcfarm_util;cent_ecacnp;cent_ecadcnp;${BETR_LIBRARIES} PARENT_SCOPE)
+#set(BETR_LIBRARIES bgcfarm_util;cent_ecadcnp;${BETR_LIBRARIES} PARENT_SCOPE)
 if (UGM)
-set(BETR_LIBRARIES bgcfarm_util;cent_ecacnp;UGM-M;${BETR_LIBRARIES} PARENT_SCOPE)
+set(BETR_LIBRARIES bgcfarm_util;UGM-M;${BETR_LIBRARIES} PARENT_SCOPE)
 else()
-set(BETR_LIBRARIES bgcfarm_util;cent_ecacnp;${BETR_LIBRARIES} PARENT_SCOPE)
+set(BETR_LIBRARIES bgcfarm_util;${BETR_LIBRARIES} PARENT_SCOPE)
 endif()
